--- a/src/main/java/com/sami/backtochildhood/ExitPage.form
+++ b/src/main/java/com/sami/backtochildhood/ExitPage.form
@@ -102,6 +102,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Exit"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExitActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
